IGNITE-19130 Sql. Align RexImpTable implementation